<?xml version="1.0"?>
<package>
  <name>cartesian_controller_examples</name>
  <version>0.0.0</version>
  <description>The cartesian_controller_examples package</description>

  <maintainer email="scherzin@fzi.de">scherzin</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/fzi-forschungszentrum-informatik/cartesian_controllers</url> 

  <author email="scherzin@fzi.de">Stefan Scherzinger</author> 


  <run_depend>xacro</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>ros_control_boilerplate</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
